<package format="3">
  <name>mujoco_tactile_sensor_plugin</name>
  <version>0.1.0</version>
  <description>
    Plugin to simulate tactile sensors in MuJoCo
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/mujoco_tactile_sensor_plugin</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_eigen</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>graphviz</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>